# openciv4

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  do_build.bat  reconfigure.bat
docs/ai-collab/: messages.md
src/engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  DDSLoader.cpp  DDSLoader.h  FPKArchive.cpp  FPKArchive.h  GLRenderer.cpp  GLRenderer.h  MapSnapshot.h  Mesh.cpp  Mesh.h  NifLoader.cpp  NifLoader.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TerrainMesh.cpp  TerrainMesh.h  main.cpp
src/engine/pathfinding/: FAStar.cpp  FAStar.h  RealFAStarIFace.cpp
src/engine/stubs/: StubInterfaces.h  StubLinkFixes.cpp  StubUtilityIFace.cpp
src/engine/xml/: XmlParser.cpp
src/gamecore/: CMakeLists.txt  CvArtFileMgr.cpp  CvCity.cpp  CvCityAI.cpp  CvDLLPythonIFaceBase.h  CvDefines.h  CvGame.cpp  CvGame.h  CvGameCoreDLL.h  CvGameCoreUtils.cpp  CvGameCoreUtils.h  CvGameTextMgr.cpp  CvInfos.cpp  CvMap.cpp  CvMap.h  CvPlayer.cpp  CvPlayerAI.cpp  CvPlayerAI.h  CvPlot.cpp  CvPlot.h  CvSelectionGroup.cpp  CvSelectionGroup.h  CvTeam.cpp  CvTeam.h  CvTeamAI.cpp  CvTeamAI.h  CvUnit.cpp  CvUnitAI.cpp  CvXMLLoadUtilityGet.cpp  CvXMLLoadUtilitySet.cpp  CyCity.h  CyMessageControl.h  FDataStreamBase.h  KmodPathFinder.cpp  KmodPathFinder.h
tools/: parse_nif_test.py
